minimal version with mag msg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,13 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
 find_package(hcoil_interfaces REQUIRED)    
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+
+include_directories(include)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -23,5 +26,13 @@ if(BUILD_TESTING)
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+
+add_executable(psu_node src/psu_node.cpp)
+ament_target_dependencies(psu_node rclcpp hcoil_interfaces)
+
+install(TARGETS
+  psu_node
+  DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
