working on actions

--- a/.github/workflows/ros2_ci.yaml
+++ b/.github/workflows/ros2_ci.yaml
@@ -15,8 +15,6 @@ jobs:
     runs-on: ubuntu-22.04  # Ensure correct OS version
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
       - name: Install ROS2 Humble
         run: |
@@ -39,6 +37,24 @@ jobs:
           # Initialize rosdep
           sudo rosdep init
           rosdep update
+
+      - name: Setup Workspace
+        run: |
+          source /opt/ros/humble/setup.bash
+          mkdir -p ros_ws/src/hcoil_pkg
+          mkdir ros_ws/src/hcoil_interfaces
+          cd ros_ws
+          colcon build
+          source install/setup.bash
+
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          path: ros_ws/src/hcoil_pkg
+
+      - name: Clone hcoil_interfaces Repository
+        run: |
+          git clone https://github.com/VFrancescon/hcoil_interfaces ros_ws/src/hcoil_interfaces
 
       - name: Build ROS2 Package
         run: |
