--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(hcoil_interfaces REQUIRED)    
+find_package(hcoil_interfaces REQUIRED)
 find_package(std_srvs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
@@ -16,12 +16,12 @@ find_package(std_srvs REQUIRED)
 
 include_directories(include)
 
-find_library(MID HCoilMiddlewareLib )
-find_library(PSU  DxkdpLib )
-find_library(LINACT LinActuatorLib )
-find_library(TMETER LakeshoreF71Lib )
-find_library(SERIAL CppLinuxSerial )
-find_library( ASTAR a-star)
+find_library(MID HCoilMiddlewareLib)
+find_library(PSU DxkdpLib)
+find_library(LINACT LinActuatorLib)
+find_library(TMETER LakeshoreF71Lib)
+find_library(SERIAL CppLinuxSerial)
+find_library(ASTAR a-star)
 
 set(MiddlewareLibs ${MID} ${PSU} ${LINACT} ${TMETER} ${SERIAL} Threads::Threads)
 set(PSULibs ${PSU} ${SERIAL})
@@ -31,14 +31,14 @@ set(TmeterLibs ${TMETER} ${SERIAL})
 if(BUILD_TESTING)
   message("HCOIL_PKG: Building tests")
   find_package(ament_cmake_gtest REQUIRED)
-  ament_add_gtest(${PROJECT_NAME}_psu_test 
+  ament_add_gtest(${PROJECT_NAME}_psu_test
     test/psu_tests.cpp
     src/psu_node.cpp
   )
 
-  ament_add_gtest(${PROJECT_NAME}_field_test 
-  test/field_tests.cpp
-  src/field_node.cpp
+  ament_add_gtest(${PROJECT_NAME}_field_test
+    test/field_tests.cpp
+    src/field_node.cpp
   )
 
   target_include_directories(${PROJECT_NAME}_psu_test PUBLIC
@@ -48,28 +48,29 @@ if(BUILD_TESTING)
   )
 
   target_include_directories(${PROJECT_NAME}_field_test PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
-  include
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    include
   )
 
-
   ament_target_dependencies(${PROJECT_NAME}_psu_test
-    rclcpp 
+    rclcpp
     hcoil_interfaces
     std_srvs
   )
 
   ament_target_dependencies(${PROJECT_NAME}_field_test
-  rclcpp 
-  hcoil_interfaces
-  std_srvs
+    rclcpp
+    hcoil_interfaces
+    std_srvs
   )
-  target_link_libraries(${PROJECT_NAME}_psu_test ${PSULibs} )
-  target_link_libraries(${PROJECT_NAME}_field_test ${PSULibs} )
+
+  target_link_libraries(${PROJECT_NAME}_psu_test ${PSULibs})
+
   target_compile_definitions(${PROJECT_NAME}_psu_test PRIVATE TESTING_EXCLUDE_MAIN=true)
   target_compile_definitions(${PROJECT_NAME}_field_test PRIVATE TESTING_EXCLUDE_MAIN=true)
-else()
+
+  else()
   message("HCOIL_PKG: Not building tests")
   add_executable(psu_node src/psu_node.cpp)
   add_executable(field_node src/field_node.cpp)
@@ -79,6 +80,10 @@ else()
   target_link_libraries(field_node ${PSULibs})
   install(TARGETS
     psu_node
+
+    DESTINATION lib/${PROJECT_NAME}
+  )
+  install(TARGETS
     field_node
     DESTINATION lib/${PROJECT_NAME}
   )
