--- a/.github/workflows/ros2_ci.yaml
+++ b/.github/workflows/ros2_ci.yaml
@@ -2,91 +2,59 @@ name: ROS2 CI Pipeline
 
 on:
   push:
-    branches:
-      - main
-      # - develop
+    branches: [main]
   pull_request:
-    branches:
-      - main
-      # - develop
+    branches: [main]
 
 jobs:
   build:
-    runs-on: ubuntu-22.04  # Ensure correct OS version
+    runs-on: ubuntu-22.04
 
     steps:
+      # Create workspace layout
+      - name: Prepare workspace
+        run: mkdir -p ros2_ws/src
 
-      - name: Install ROS2 Humble
-        run: |
-          # Ensure system is up-to-date
-          sudo apt update && sudo apt upgrade -y
-          
-          # Install required tools
-          sudo apt install -y curl gnupg lsb-release
-
-          # Add ROS2 repository key and source list
-          sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key | sudo apt-key add -
-          echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2.list
-          
-          # Update package list again
-          sudo apt update
-
-          # Install ROS2 Humble
-          sudo apt install -y ros-humble-ros-base ros-dev-tools python3-colcon-common-extensions python3-rosdep python3-vcstool build-essential
-
-          # Initialize rosdep
-          sudo rosdep init
-          rosdep update
-
-      - name: Setup Dependencies
-        run: | 
-          git clone https://github.com/VFrancescon/coil_libs coil_libs
-          git clone https://github.com/gbmhunter/CppLinuxSerial CppLinuxSerial
-          mkdir -p coil_libs/build
-          mkdir -p CppLinuxSerial/build
-          cd CppLinuxSerial/build
-          cmake .. -DBUILD_TESTS=FALSE 
-          sudo make -j16 install
-          cd ../../
-          cd coil_libs/build
-          cmake ..
-          sudo make -j16 install
-          cd ../../
-          pwd
-
-
-      - name: Setup ROS Workspace
-        run: |
-          source /opt/ros/humble/setup.bash
-          mkdir -p ~/ros_ws/src/hcoil_pkg
-          mkdir ~/ros_ws/src/hcoil_interfaces
-          cd ~/ros_ws
-          colcon build
-          source install/setup.bash
-
-      - name: Checkout Repository
+      # Checkout your main repository into ros2_ws/src
+      - name: Checkout main repository
         uses: actions/checkout@v4
         with:
-          path: ~/ros_ws/src/hcoil_pkg
+          path: ros2_ws/src/hcoil_pkg
 
-      - name: Clone hcoil_interfaces Repository
-        run: |
-          git clone https://github.com/VFrancescon/hcoil_interfaces ~/ros_ws/src/hcoil_interfaces
+      # Checkout magnetic_tentacle_interfaces into ros2_ws/src
+      - name: Checkout hcoil_interfaces
+        uses: actions/checkout@v4
+        with:
+          repository: VFrancescon/hcoil_interfaces
+          path: ros2_ws/src/hcoil_interfaces
 
-      - name: Build ROS2 Package
+      # Install ROS2 Humble
+      - name: Setup ROS2
+        shell: bash
         run: |
-          cd ~/ros_ws
-          source /opt/ros/humble/setup.bash  
+          sudo apt update
+          sudo apt install -y curl gnupg lsb-release
+          sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key | sudo apt-key add -
+          echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2.list
+          sudo apt update
+          sudo apt install -y ros-humble-ros-base python3-colcon-common-extensions python3-rosdep python3-vcstool build-essential
+          sudo rosdep init || true
+          rosdep update
+
+      # Build both packages and run tests
+      - name: Build and Test
+        shell: bash
+        run: |
+          source /opt/ros/humble/setup.bash
+          cd ros2_ws
+          rosdep install --from-paths src --ignore-src -r -y
           colcon build --symlink-install
-          
-      # - name: Run Tests
-      #   run: |
-      #     source /opt/ros/humble/setup.bash
-      #     colcon test --event-handlers console_cohesion+
+          colcon test --return-code-on-test-failure --event-handlers console_cohesion+
 
-      # - name: Upload Test Results
-      #   if: always()
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: test-results
-      #     path: build/**/test_results/**/*.xml
+      # Upload test results as artifacts
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: ros2_ws/build/**/test_results/**/*.xml
