--- a/.github/workflows/ros2_ci.yaml
+++ b/.github/workflows/ros2_ci.yaml
@@ -11,6 +11,24 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+
+
+      - name: Setup Dependencies
+        run: | 
+          git clone https://github.com/VFrancescon/coil_libs coil_libs
+          git clone https://github.com/gbmhunter/CppLinuxSerial CppLinuxSerial
+          mkdir -p coil_libs/build
+          mkdir -p CppLinuxSerial/build
+          cd CppLinuxSerial/build
+          cmake .. -DBUILD_TESTS=FALSE 
+          sudo make -j16 install
+          cd ../../
+          cd coil_libs/build
+          cmake ..
+          sudo make -j16 install
+          cd ~
+
+
       # Create workspace layout
       - name: Prepare workspace
         run: mkdir -p ros2_ws/src
@@ -48,7 +66,7 @@ jobs:
           source /opt/ros/humble/setup.bash
           cd ros2_ws
           rosdep install --from-paths src --ignore-src -r -y
-          colcon build --symlink-install
+          colcon build --cmake-args -DBUILD_TESTING=TRUE
           colcon test --return-code-on-test-failure --event-handlers console_cohesion+
 
       # Upload test results as artifacts
