fixed bug in field node. added request python script for verification

--- a/.github/workflows/ros2_ci.yaml
+++ b/.github/workflows/ros2_ci.yaml
@@ -73,6 +73,7 @@ jobs:
           source /opt/ros/humble/setup.bash
           cd ros2_ws
           rosdep install --from-paths src --ignore-src -r -y
+          colcon build --packages-select magnetic_tentacle_interfaces
           colcon build --cmake-args -DBUILD_TESTING=TRUE
           colcon test --return-code-on-test-failure --event-handlers console_cohesion+
 
